# pneuma

pneuma_core/: CMakeLists.txt  package.xml
pneuma_core/include/pneuma_core/: core.hpp  pneuma_core.hpp
pneuma_core/launch/: core.launch.py
pneuma_core/src/: core_main.cpp  core_ops.cpp  core_par.cpp  pneuma_core.cpp
pneuma_interfaces/: CMakeLists.txt  package.xml
pneuma_interfaces/srv/: Register.srv
pneuma_utils/: CMakeLists.txt  package.xml
pneuma_utils/include/pneuma_utils/: module.hpp  module_types.hpp
pneuma_utils/src/: management_utils.cpp
