<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pneuma_core</name>
  <version>0.0.1</version>
  <description>Core for the pneuma project</description>

  <maintainer email="user@example.com">TheUncivil</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>